samples/_failures_safe/1761072426_70e827_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2786b29b.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_2786b29b.c:159:9: error: expected declaration or statement at end of input
  159 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_2786b29b.c:159:9: error: expected declaration or statement at end of input
